--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^2.0.3",
+    "jest-puppeteer": "^3.3.1",
     "prop-types": "latest",
+    "puppeteer": "^1.7.0",
     "react": "^16.4.2",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
@@ -13,6 +15,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "uuid": "^3.3.2"
   },
   "proxy": {
@@ -24,6 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test:e2e": "jest -c E2E/jest.config.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
