--- a/package.json
+++ b/package.json
@@ -3,32 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.5.1",
-    "@material-ui/icons": "^2.0.3",
-    "jest-puppeteer": "^3.3.1",
+    "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
+    "jest-puppeteer": "^3.4.0",
     "prop-types": "latest",
-    "puppeteer": "^1.7.0",
-    "react": "^16.4.2",
+    "puppeteer": "^1.10.0",
+    "react": "^16.6.0",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
+    "react-scripts": "2.0.3",
+    "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "uuid": "^3.3.2"
   },
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:3001",
-      "ws": true
-    }
-  },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test:e2e": "jest -c E2E/jest.config.js",
-    "test": "react-scripts test --env=jsdom",
+    "test:e2e": "react-scripts test --config E2E/jest-e2e.config.js",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
